[package]
name = "quic-min-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0" 
tokio = { version = "^1.19", features = ["full"] }
s2n-quic = { version = "^1.5",  default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }